# patent-intelligence-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: config.py  server.py
src/clients/: patents.py
src/tools/: patents.py
