[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patent-intelligence-mcp-server"
version = "0.2.0"
description = "MCP server providing AI agents with access to patent data — 10 tools for patent search, citation networks, trend analysis, CPC classification, portfolio comparison and technology landscapes via USPTO PatentsView API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AiAgentKarl"}
]
keywords = [
    "mcp", "patents", "uspto", "intellectual-property",
    "patent-search", "ai-agent", "model-context-protocol",
    "patent-analytics", "technology-trends", "cpc-classification",
    "patent-landscape", "portfolio-comparison", "citation-network"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/patent-intelligence-mcp-server"
Repository = "https://github.com/AiAgentKarl/patent-intelligence-mcp-server"
Issues = "https://github.com/AiAgentKarl/patent-intelligence-mcp-server/issues"

[project.scripts]
patent-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
